syntax = "proto3";

package HEAL.Attic;

message Bundle {
  repeated bytes transformer_guids = 1;
  repeated bytes type_guids = 2;

  uint32 root_box_id = 10;
  repeated Box boxes = 20;
  repeated string strings = 30;
}

message Box {
  uint32 transformer_id = 1;
  uint32 type_box_id = 2;

  uint32 type_id = 10;
  repeated uint32 generic_type_box_ids = 11;

  bool bool = 20;
  int32 int = 21;
  int64 long = 22;
  uint32 u_int = 23;
  uint64 u_long = 24;
  float float = 25;
  double double = 26;
  bytes bytes = 27;

  repeated bool bools = 30;
  repeated int32 ints = 31;
  repeated int64 longs = 32;
  repeated uint32 u_ints = 33;
  repeated uint64 u_longs = 34;
  repeated float floats = 35;
  repeated double doubles = 36;

  repeated KeyValuePairBox key_value_pairs = 40;
  uint32 comparer_id = 50;

  ArrayMetaInfoBox arrayMetaInfoBox = 60;
}

message ArrayMetaInfoBox {
  int32 rank = 1;
  repeated int32 lengths = 2;
  repeated int32 lowerBounds = 3;
}

message KeyValuePairBox {
  uint32 type_id = 1;
  map<uint32, uint32> key_value_pairs = 2;
}
